[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/white_rect_10x10.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/ui/moon_huge_title.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/misc/stars_and_nebula_background_non_game.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/buttons.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/itch/itch_cover.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "ItchCoverAnimation"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Moonshot2MarginContainer/Moonshot2VBoxContainer/MoonshotLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1.2, 1.2, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moonshot2MarginContainer/Moonshot2VBoxContainer/TwoLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GenShipMarginContainer/GenShipVBoxContainer/GenerationLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GenShipMarginContainer/GenShipVBoxContainer/ShipLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GenShipMarginContainer/GenShipVBoxContainer/LunaLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("moon_huge_title:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -155.652, 229.671 ), Vector2( 497.085, 229.671 ) ]
}

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 1.87
glow_strength = 1.03
glow_bloom = 0.03
glow_blend_mode = 0

[node name="itch_cover" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsAndNebula" parent="." instance=ExtResource( 4 )]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0.0352941, 0.266667, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 630, 500 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="moon_huge_title" parent="." instance=ExtResource( 3 )]
position = Vector2( -155.652, 229.671 )

[node name="Moonshot2MarginContainer" type="MarginContainer" parent="."]
margin_right = 444.0
margin_bottom = 198.0
custom_constants/margin_top = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moonshot2VBoxContainer" type="VBoxContainer" parent="Moonshot2MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 444.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoonshotLabel" type="Label" parent="Moonshot2MarginContainer/Moonshot2VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 424.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 2 )
text = "Moonshot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwoLabel" type="Label" parent="Moonshot2MarginContainer/Moonshot2VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 91.0
margin_right = 424.0
margin_bottom = 178.0
custom_fonts/font = ExtResource( 2 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenShipMarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -28.1009
margin_right = 370.0
margin_bottom = 184.899
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenShipVBoxContainer" type="VBoxContainer" parent="GenShipMarginContainer"]
margin_left = 20.0
margin_right = 370.0
margin_bottom = 213.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerationLabel" type="Label" parent="GenShipMarginContainer/GenShipVBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 350.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 5 )
text = "Generation"
align = 1
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipLabel" type="Label" parent="GenShipMarginContainer/GenShipVBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 63.0
margin_right = 350.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 5 )
text = "Ship"
align = 1
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LunaLabel" type="Label" parent="GenShipMarginContainer/GenShipVBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 126.0
margin_right = 350.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 2 )
text = "Luna"
align = 1
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ItchCoverAnimation = SubResource( 1 )
"anims/ItchCoverAnimation 2" = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
